// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge matches the snapshot 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "backgroundColor": "#DCEBE6",
        "borderRadius": 15,
        "paddingHorizontal": 15,
        "paddingVertical": 6,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#2F7D6D",
          "fontFamily": "Figtree_700Bold",
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      Today
    </Text>
  </View>
</KeyboardProvider>
`;

exports[`StatusBadge matches the snapshot for the amber tone 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "backgroundColor": "#FBEFD9",
        "borderRadius": 15,
        "paddingHorizontal": 15,
        "paddingVertical": 6,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#A5660E",
          "fontFamily": "Figtree_700Bold",
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      Today
    </Text>
  </View>
</KeyboardProvider>
`;

exports[`StatusBadge matches the snapshot for the coral tone 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "backgroundColor": "#FBE3DB",
        "borderRadius": 15,
        "paddingHorizontal": 15,
        "paddingVertical": 6,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#B63A17",
          "fontFamily": "Figtree_700Bold",
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      Today
    </Text>
  </View>
</KeyboardProvider>
`;
